# shikho-demo

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: dependencies.py  errors.py  handlers.py
backend/app/api/routes/: circles.py  demo_access.py  health.py  notes.py
backend/app/models/: __init__.py  circle.py  demo_user.py
backend/app/schemas/: __init__.py  circle.py  demo_user.py  note.py
backend/app/scripts/: __init__.py  seed_demo.py
backend/app/services/: circles.py  demo_access.py  notes.py  progress.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_demo_users.py  0002_circle_entry_dashboard.py  0003_simulated_progress.py  0004_circle_store.py  0005_mentor_publishing.py  0006_multiple_circles.py  0007_creator_roadmap_actions.py
backend/tests/: conftest.py  test_circles.py  test_demo_access.py  test_health.py  test_phase4.py
docs/: v1-overview.md
docs/implementation/: 00-implementation-roadmap.md  phase-0-foundation-and-demo-access.md  phase-1-circle-entry-and-dashboard.md  phase-2-simulated-progress-and-leaderboard.md  phase-3-circle-store.md  phase-4-mentor-and-roadmap-publishing.md  phase-5-demo-hardening-and-acceptance.md
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: app.tsx  main.tsx  styles.css
(+44 files in other folders)
